deploy/vote-app-with-mysql-vm/vote-app-mysql-vm-all-in-one-with-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"},{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"},{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"},{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"},{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"},{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"}]'
    app.openshift.io/route-disabled: "false"
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"vote-app:latest","namespace":"demo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"vote-app\")].image","pause":"false"}]'
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
    app.kubernetes.io/name: vote-app
    app.kubernetes.io/part-of: vote-app
    app.openshift.io/runtime: python
  name: vote-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vote-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      labels:
        app: vote-app
        deployment: vote-app
    spec:
      containers:
      - env:
        - name: ENDPOINT_ADDRESS
          value: db
        - name: PORT
          value: "3306"
        - name: DB_NAME
          value: vote
        - name: MASTER_USERNAME
          value: user
        - name: MASTER_PASSWORD
          value: password
        - name: DB_TYPE
          value: mysql
        image: quay.io/sjbylo/flask-vote-app:latest
        imagePullPolicy: Always
        name: vote-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
    app.kubernetes.io/name: vote-app
    app.kubernetes.io/part-of: vote-app
    app.openshift.io/runtime-version: latest
  name: vote-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vote-app
    deployment: vote-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
    app.kubernetes.io/component: db
    app.kubernetes.io/instance: db
  name: db
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    kubevirt.io/domain: mysql-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"}]'
    openshift.io/host.generated: "true"
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
    app.kubernetes.io/name: vote-app
    app.kubernetes.io/part-of: vote-app
    app.openshift.io/runtime-version: latest
  name: vote-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vote-app
    weight: 100
  wildcardPolicy: None
