deploy/vote-app-with-mysql-vm/vote-app-mysql-vm-all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
    app.kubernetes.io/part-of: vote-app
  name: vote-app
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"kubevirt.io/v1","kind":"VirtualMachine","name":"mysql-demo"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: vote-app
  template:
    metadata:
      labels:
        deployment: vote-app
    spec:
      containers:
        - env:
            - name: ENDPOINT_ADDRESS
              value: db
            - name: PORT
              value: "3306"
            - name: DB_NAME
              value: vote
            - name: MASTER_USERNAME
              value: user
            - name: MASTER_PASSWORD
              value: password
            - name: DB_TYPE
              value: mysql
          image: quay.io/sjbylo/flask-vote-app:latest
          name: vote-app
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
  name: vote-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: vote-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
    app.kubernetes.io/component: db
    app.kubernetes.io/instance: db
  name: db
spec:
  ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    kubevirt.io/domain: mysql-demo
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vote-app
    app.kubernetes.io/component: vote-app
    app.kubernetes.io/instance: vote-app
  name: vote-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: vote-app
    weight: 100
